--- a/app/src/main/res/layout/fragment_self_limit_bet.xml
+++ b/app/src/main/res/layout/fragment_self_limit_bet.xml
@@ -96,8 +96,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:minWidth="62dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginLeft="@dimen/margin_10"
+                android:layout_marginStart="@dimen/margin_10"
+                android:layout_marginEnd="@dimen/margin_10"
                 android:text="@string/self_limit_per_bet_limit_highest"
                 android:textColor="@color/colorBlackLight"
                 android:textSize="@dimen/textSize13sp"
@@ -107,7 +109,6 @@
                 android:layout_width="1dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
-                android:layout_marginLeft="@dimen/margin_36"
                 android:layout_marginTop="@dimen/margin_10"
                 android:layout_marginBottom="@dimen/margin_10"
                 android:background="@color/colorWhite6" />
@@ -158,23 +159,42 @@
         android:textColor="@color/colorRed"
         android:textSize="@dimen/textSize12sp"/>
 
-
-    <TextView
-        android:id="@+id/tvPerBetLimit"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_8"
-        android:text="@string/self_limit_per_bet_limit_user"
-        android:textColor="@color/colorRed"
-        android:textSize="@dimen/textSize12sp" />
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tvLimit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_8"
-        android:text="@string/self_limit_per_bet_limit_user_limit"
-        android:textColor="@color/colorRed"
-        android:textSize="@dimen/textSize12sp" />
+        <TextView
+            android:id="@+id/tvDot"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/dot2"
+            android:textColor="@color/colorRed"
+            android:textSize="@dimen/textSize12sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tvPerBetLimit" />
+
+        <TextView
+            android:id="@+id/tvPerBetLimit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_8"
+            android:text="@string/self_limit_per_bet_limit_user"
+            android:textColor="@color/colorRed"
+            android:textSize="@dimen/textSize12sp"
+            app:layout_constraintStart_toEndOf="@id/tvDot"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tvLimit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_6"
+            android:text="@string/self_limit_per_bet_limit_user_limit"
+            android:textColor="@color/colorRed"
+            android:textSize="@dimen/textSize12sp"
+            app:layout_constraintStart_toStartOf="@id/tvPerBetLimit"
+            app:layout_constraintTop_toBottomOf="@id/tvPerBetLimit" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
