[修正] 注單輸入金額鍵盤 "最大"按鈕文字多國語系

--- a/app/src/main/res/layout/item_number_keyboard_layout.xml
+++ b/app/src/main/res/layout/item_number_keyboard_layout.xml
@@ -227,7 +227,7 @@
             android:layout_marginEnd="@dimen/margin_2"            android:layout_weight="1"
             android:background="@drawable/bg_radius_4_button_7c7c7c"
             android:gravity="center"
-            android:text="Max"
+            android:text="@string/keyboard_max"
             android:textColor="@color/white"
             android:textSize="@dimen/textSize14sp" />
 
