--- a/app/src/main/res/layout/settlement_date_item.xml
+++ b/app/src/main/res/layout/settlement_date_item.xml
@@ -2,7 +2,7 @@
 <CheckBox xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ctv_item"
-    android:layout_width="85dp"
+    android:layout_width="80dp"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_margin="3dp"
@@ -12,6 +12,9 @@
     android:minHeight="38dp"
     android:orientation="vertical"
     android:textAlignment="center"
+    android:textAllCaps="true"
     android:textColor="@drawable/effect_select_date_text_gray"
+    android:textSize="@dimen/textSize12sp"
     tools:checked="true"
+    tools:ignore="SpUsage"
     tools:text="星期一\n10月20日" />
