--- a/app/src/main/res/drawable/selector_lcs_icon.xml
+++ b/app/src/main/res/drawable/selector_lcs_icon.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/colorWhite" android:state_selected="true" />
-    <item android:color="@color/colorWhite" android:state_activated="true" />
-    <item android:color="@color/colorBlue" />
+    <item android:drawable="@drawable/icon_lcs_tab_selected" android:state_selected="true"  />
+    <item android:drawable="@drawable/icon_lcs_tab_selected" android:state_selected="true"  />
+    <item android:drawable="@drawable/icon_lcs_tab_unselected" />
 </selector>
 
