--- a/app/src/main/res/layout/tab_odds_detail.xml
+++ b/app/src/main/res/layout/tab_odds_detail.xml
@@ -1,24 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout_tab"
     android:layout_width="wrap_content"
     android:layout_height="42dp"
-    android:id="@+id/layout_tab"
     android:layout_marginHorizontal="6dp"
-    android:background="@drawable/shape_odd_category_bg_v4">
+    android:background="@drawable/shape_odd_category_bg_v4"
+    android:minWidth="100dp">
 
-    <TextView
-        android:id="@+id/tv_tab"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="42dp"
-        android:minWidth="100dp"
-        android:paddingHorizontal="8dp"
-        android:gravity="center"
-        android:textColor="@color/selector_odd_category_text_v4"
-        android:textSize="@dimen/textSize12sp"
-        android:textAllCaps="true"
-        tools:ignore="SpUsage"
-        tools:text="受歡迎的" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="horizontal">
 
+        <ImageView
+            android:id="@+id/img_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/selector_lcs_icon"
+            android:visibility="gone"
+            tools:visibility="visible"/>
+
+        <TextView
+            android:id="@+id/tv_tab"
+            android:layout_width="wrap_content"
+            android:layout_height="42dp"
+            android:gravity="center"
+
+            android:paddingHorizontal="8dp"
+            android:textAllCaps="true"
+            android:textColor="@color/selector_odd_category_text_v4"
+            android:textSize="@dimen/textSize12sp"
+            tools:ignore="SpUsage"
+            tools:text="受歡迎的" />
+
+    </LinearLayout>
 </FrameLayout>
 
