--- a/app/src/main/res/drawable/bg_bounds_edittext_h.xml
+++ b/app/src/main/res/drawable/bg_bounds_edittext_h.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="8dp" />
-            <solid android:color="#ffffffff"/>
+            <solid android:color="@color/color_000000_FFFFFF"/>
             <stroke android:color="@color/color_317FFF_1053af"
                 android:width="1dp"/>
         </shape>
