--- a/app/src/main/res/drawable/bg_radius_2_edittext_focus.xml
+++ b/app/src/main/res/drawable/bg_radius_2_edittext_focus.xml
@@ -5,5 +5,5 @@
     <stroke
         android:width="1dp"
         android:color="@color/color_317FFF_0760D4" />
-    <solid android:color="@color/white" />
+    <solid android:color="@color/color_404348_FFFFFF" />
 </shape>
