--- a/app/src/main/res/drawable/bg_radius_4_button_ededed.xml
+++ b/app/src/main/res/drawable/bg_radius_4_button_ededed.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="4dp" />
-    <solid android:color="#fffcfcfc" />
+    <solid android:color="@color/color_191919_FCFCFC" />
     <stroke
         android:width="1dp"
-        android:color="@color/color_1F1F1F_e6e6e6" />
+        android:color="@color/color_404040_cccccc" />
 </shape>
