--- a/app/src/main/res/layout/activity_game_publicity.xml
+++ b/app/src/main/res/layout/activity_game_publicity.xml
@@ -67,7 +67,7 @@
             android:background="@drawable/bg_gradient_orange3_orange_light_4dp"
             android:gravity="center"
             android:text="@string/btn_register"
-            android:textColor="@color/color_FFFFFFFF"
+            android:textColor="@color/color_FFFFFF_FFFFFF"
             android:textSize="@dimen/textSize16sp"
             app:layout_constraintBottom_toBottomOf="@id/viewBottom"
             app:layout_constraintEnd_toStartOf="@id/tvLogin"
@@ -85,7 +85,7 @@
             android:background="@drawable/bg_gradient_blue3_blue4_4dp"
             android:gravity="center"
             android:text="@string/btn_login"
-            android:textColor="@color/color_FFFFFFFF"
+            android:textColor="@color/color_FFFFFF_FFFFFF"
             android:textSize="@dimen/textSize16sp"
             app:layout_constraintBottom_toBottomOf="@id/viewBottom"
             app:layout_constraintEnd_toEndOf="@id/viewBottom"
