--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -112,6 +112,7 @@
                     android:hint="@string/password_hint"
                     android:inputType="textPassword"
                     android:maxLines="1"
+                    android:textColor="@color/color_e5e5e5_333333"
                     android:textSize="@dimen/textSize14sp"
                     android:textStyle="bold" />
 
@@ -142,6 +143,7 @@
                         android:layout_height="wrap_content"
                         android:imeOptions="actionNext"
                         android:inputType="number"
+                        android:textColor="@color/color_e5e5e5_333333"
                         android:maxLines="1"
                         android:textSize="@dimen/textSize14sp" />
 
