--- a/app/src/main/res/layout/fragment_bottom_sheet_betinfo_item.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet_betinfo_item.xml
@@ -58,6 +58,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/margin_26"
                         android:gravity="center_vertical"
+                        android:background="@color/color_191919_FCFCFC"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
 
@@ -271,8 +272,8 @@
                                 android:letterSpacing="0.05"
                                 android:maxLength="7"
                                 android:paddingStart="10dp"
-                                android:textColor="@color/color_317FFF_0760D4"
-                                android:textColorHint="@color/color_404040_cccccc"
+                                android:textColor="@color/color_FFFFFF_0760D4"
+                                android:textColorHint="@color/color_cccccc"
                                 android:textSize="@dimen/textSize16sp"
                                 android:textStyle="bold"
                                 app:layout_constraintBottom_toTopOf="@+id/tv_error_message"
@@ -430,7 +431,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="58dp"
-                android:background="@color/color_FFEEEFF0"
+                android:background="@color/color_191919_EEEFF0"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
                 android:paddingLeft="@dimen/margin_8"
