--- a/app/src/main/res/layout/publicity_game_type_view.xml
+++ b/app/src/main/res/layout/publicity_game_type_view.xml
@@ -51,7 +51,7 @@
                 android:layout_marginEnd="9dp"
                 android:layout_marginBottom="3dp"
                 android:gravity="center"
-                android:textColor="@color/color_FFFFFFFF"
+                android:textColor="@color/color_FFFFFF_FFFFFF"
                 android:textSize="@dimen/textSize12sp"
                 tools:text="@string/soccer" />
         </LinearLayout>
@@ -74,7 +74,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
-            android:textColor="@color/color_FFFFFFFF"
+            android:textColor="@color/color_FFFFFF_FFFFFF"
             android:textSize="@dimen/textSize12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/viewHypotenuse"
@@ -86,7 +86,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
-            android:textColor="@color/color_FFFFFFFF"
+            android:textColor="@color/color_FFFFFF_FFFFFF"
             android:textSize="@dimen/textSize12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
