--- a/app/src/main/res/drawable/bg_search_layout.xml
+++ b/app/src/main/res/drawable/bg_search_layout.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-        <stroke android:width="1dp" android:color="#ffededed" />
-        <solid android:color="#ffffffff" />
+        <stroke android:width="1dp" android:color="@color/color_404348_D2D2D7" />
+        <solid android:color="@color/color_1A1A1A_FFFFFF" />
         <corners android:radius="18dp" />
     </shape>
     </item>
