--- a/app/src/main/res/drawable/button_radius_4_cde5ff.xml
+++ b/app/src/main/res/drawable/button_radius_4_cde5ff.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="4dp" />
-    <solid android:color="@color/color_CDE5FF" />
+    <solid android:color="@color/color_999999_CDE5FF" />
 </shape>
