--- a/app/src/main/res/drawable/ic_search.xml
+++ b/app/src/main/res/drawable/ic_search.xml
@@ -4,7 +4,7 @@
     android:viewportWidth="16"
     android:viewportHeight="16">
     <path
-        android:fillColor="#999"
+        android:fillColor="@color/color_939393_999999"
         android:fillType="evenOdd"
         android:pathData="M1.5,6.5c0,-2.757 2.243,-5 5,-5s5,2.243 5,5 -2.243,5 -5,5 -5,-2.243 -5,-5m14.287,8.259l-4.208,-4.208C12.466,9.439 13,8.033 13,6.5 13,2.91 10.09,0 6.5,0S0,2.91 0,6.5 2.91,13 6.5,13c1.533,0 2.939,-0.534 4.051,-1.421l4.208,4.208c0.141,0.142 0.327,0.213 0.513,0.213 0.187,0 0.373,-0.071 0.515,-0.213 0.284,-0.284 0.284,-0.744 0,-1.028" />
 </vector>
