--- a/app/src/main/res/layout/content_bet_info_item_v2.xml
+++ b/app/src/main/res/layout/content_bet_info_item_v2.xml
@@ -37,6 +37,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/margin_26"
                     android:gravity="center_vertical"
+                    android:background="@color/color_191919_FCFCFC"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
 
