--- a/app/src/main/res/layout/home_game_table_bar.xml
+++ b/app/src/main/res/layout/home_game_table_bar.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rg_table_bar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
     android:minHeight="56dp"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    tools:ignore="SpUsage">
 
     <View
         android:layout_width="0dp"
@@ -24,7 +26,7 @@
         android:text="@string/home_tab_in_play"
         android:textAllCaps="true"
         android:textColor="@color/selector_blue_gray_light"
-        android:textSize="@dimen/textSize20sp" />
+        android:textSize="@dimen/textSize16sp" />
 
     <RadioButton
         android:id="@+id/rb_as_start"
@@ -36,7 +38,7 @@
         android:text="@string/game_soon"
         android:textAllCaps="true"
         android:textColor="@color/selector_blue_gray_light"
-        android:textSize="@dimen/textSize20sp" />
+        android:textSize="@dimen/textSize16sp" />
 
     <View
         android:layout_width="0dp"
