--- a/app/src/main/res/layout/home_menu_block.xml
+++ b/app/src/main/res/layout/home_menu_block.xml
@@ -8,7 +8,9 @@
     android:layout_margin="6dp"
     android:background="@drawable/fillet_5dp_white"
     android:orientation="vertical"
-    android:padding="6dp">
+    android:paddingHorizontal="6dp"
+    android:paddingTop="6dp"
+    android:paddingBottom="2dp">
 
 
     <LinearLayout
@@ -19,8 +21,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/card_first_game"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="222"
+            android:layout_height="100dp"
+            android:layout_weight="0.538"
             android:background="@drawable/fillet_4dp_home_game_item_blue">
 
             <TextView
@@ -30,10 +32,12 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:alpha="0.25"
+                android:includeFontPadding="false"
                 android:maxLines="1"
                 android:text="@string/goal_buster"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/textSize16sp"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -42,6 +46,8 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:contentDescription="@null"
+                android:translationX="6dp"
+                android:translationY="6dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -57,6 +63,7 @@
                 android:paddingTop="2dp"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/textSize16sp"
+                android:textStyle="bold"
                 app:layout_constrainedWidth="true"
                 app:layout_constraintBottom_toTopOf="@+id/tv_first_game_count"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -73,6 +80,7 @@
                 android:includeFontPadding="false"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/textSize16sp"
+                android:textStyle="bold"
                 app:layout_constrainedWidth="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -89,8 +97,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/card_second_game"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="158"
+            android:layout_height="100dp"
+            android:layout_weight="0.382"
             android:background="@drawable/fillet_4dp_home_game_item_blue">
 
             <TextView
@@ -100,10 +108,12 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:alpha="0.25"
+                android:includeFontPadding="false"
                 android:maxLines="1"
                 android:text="@string/top_games"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/textSize16sp"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -112,6 +122,8 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:contentDescription="@null"
+                android:translationX="6dp"
+                android:translationY="6dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="2"
@@ -128,6 +140,7 @@
                 android:paddingTop="2dp"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/textSize16sp"
+                android:textStyle="bold"
                 app:layout_constrainedWidth="true"
                 app:layout_constraintBottom_toTopOf="@id/tv_second_game_count"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -144,6 +157,7 @@
                 android:includeFontPadding="false"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/textSize16sp"
+                android:textStyle="bold"
                 app:layout_constrainedWidth="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
