--- a/app/src/main/res/layout/itemview_sport_type_v4.xml
+++ b/app/src/main/res/layout/itemview_sport_type_v4.xml
@@ -25,9 +25,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
+        android:includeFontPadding="false"
         android:textColor="@color/selector_sport_type_item_text_v4"
         android:textSize="@dimen/textSize12sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/sport_type_home_img"
