--- a/app/src/main/res/layout/itemview_sport_type_list.xml
+++ b/app/src/main/res/layout/itemview_sport_type_list.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-
     android:layout_height="68dp">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvSportType"
+        android:layout_marginHorizontal="-8dp"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:clipToPadding="false"
@@ -21,5 +21,5 @@
         tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/itemview_sport_type_v4" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
 
