--- a/app/src/main/res/layout/view_bottom_navigation.xml
+++ b/app/src/main/res/layout/view_bottom_navigation.xml
@@ -154,11 +154,11 @@
 
     <TextView
         android:id="@+id/txv_btm_hint"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="17dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="17dp"
+        android:layout_marginEnd="20dp"
         android:gravity="center_horizontal"
         android:paddingTop="16dp"
         android:text="@string/btm_navigation_hint"
