--- a/app/src/main/res/layout/view_odds_detail_toolbar.xml
+++ b/app/src/main/res/layout/view_odds_detail_toolbar.xml
@@ -95,7 +95,7 @@
                 android:ellipsize="end"
                 android:singleLine="true"
                 android:text="@{gameViewModel.oddsDetailResult.peekContent().oddsDetailData.matchOdd.matchInfo.homeName}"
-                android:textColor="@color/color_191919_FCFCFC"
+                android:textColor="@color/color_FFFFFF_FFFFFF"
                 android:textSize="@dimen/textSize16sp"
                 app:layout_constraintBottom_toTopOf="@+id/tv_away_name"
                 app:layout_constraintEnd_toStartOf="@+id/tv_home_score_total"
@@ -124,7 +124,7 @@
                 android:layout_width="32dp"
                 android:layout_height="0dp"
                 android:gravity="center|end"
-                android:textColor="@color/color_191919_FCFCFC"
+                android:textColor="@color/color_FFFFFF_FFFFFF"
                 android:textSize="@dimen/textSize16sp"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_home_score_total"
@@ -139,7 +139,7 @@
                 android:layout_width="32dp"
                 android:layout_height="0dp"
                 android:gravity="center|end"
-                android:textColor="@color/color_191919_FCFCFC"
+                android:textColor="@color/color_FFFFFF_FFFFFF"
                 android:textSize="@dimen/textSize16sp"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_home_score_live"
@@ -154,7 +154,7 @@
                 android:layout_width="32dp"
                 android:layout_height="0dp"
                 android:gravity="center|end"
-                android:textColor="@color/color_191919_FCFCFC"
+                android:textColor="@color/color_FFFFFF_FFFFFF"
                 android:textSize="@dimen/textSize16sp"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_away_score_live"
@@ -169,7 +169,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@color/color_E44438_e44438"
-                android:textColor="@color/color_191919_FCFCFC"
+                android:textColor="@color/color_FFFFFF_FFFFFF"
                 android:textSize="@dimen/textSize12sp"
                 android:textStyle="bold"
                 android:visibility="gone"
@@ -186,7 +186,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@color/color_E44438_e44438"
-                android:textColor="@color/color_191919_FCFCFC"
+                android:textColor="@color/color_FFFFFF_FFFFFF"
                 android:textSize="@dimen/textSize12sp"
                 android:textStyle="bold"
                 android:visibility="gone"
@@ -223,7 +223,7 @@
                 android:ellipsize="end"
                 android:singleLine="true"
                 android:text="@{gameViewModel.oddsDetailResult.peekContent().oddsDetailData.matchOdd.matchInfo.awayName}"
-                android:textColor="@color/color_191919_FCFCFC"
+                android:textColor="@color/color_FFFFFF_FFFFFF"
                 android:textSize="@dimen/textSize16sp"
                 app:layout_constraintBottom_toTopOf="@+id/tv_status_left"
                 app:layout_constraintEnd_toStartOf="@+id/tv_away_score_total"
@@ -251,7 +251,7 @@
                 android:layout_width="32dp"
                 android:layout_height="0dp"
                 android:gravity="center|end"
-                android:textColor="@color/color_191919_FCFCFC"
+                android:textColor="@color/color_FFFFFF_FFFFFF"
                 android:textSize="@dimen/textSize16sp"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_away_score_total"
@@ -283,7 +283,7 @@
                     android:id="@+id/tv_time_top"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/color_666666_bcbcbc"
+                    android:textColor="@color/color_bcbcbc"
                     android:textSize="@dimen/textSize12sp"
                     tools:text="17 / 16" />
 
@@ -291,7 +291,7 @@
                     android:id="@+id/tv_time_bottom"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/color_666666_bcbcbc"
+                    android:textColor="@color/color_bcbcbc"
                     android:textSize="@dimen/textSize12sp"
                     android:text="@string/time_null" />
 
@@ -310,7 +310,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/activity_horizontal_margin"
                 android:layout_marginBottom="10dp"
-                android:textColor="@color/color_666666_bcbcbc"
+                android:textColor="@color/color_bcbcbc"
                 android:textSize="@dimen/textSize12sp"
                 android:visibility="gone"
                 app:layout_constrainedWidth="true"
