--- a/app/src/main/res/drawable/divider_gray_light_3_1dp.xml
+++ b/app/src/main/res/drawable/divider_gray_light_3_1dp.xml
@@ -3,6 +3,6 @@
     android:shape="line">
     <stroke
         android:width="1dp"
-        android:color="@color/colorGrayLight3" />
+        android:color="@color/color_1F1F1F_e6e6e6" />
     <size android:height="1dp" />
 </shape>
