--- a/app/src/main/res/layout/fragment_account_history.xml
+++ b/app/src/main/res/layout/fragment_account_history.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/color_191919_FCFCFC"
     tools:context="org.cxct.sportlottery.ui.main.accountHistory.first.AccountHistoryFragment"
     tools:ignore="SpUsage">
 
