--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -134,9 +134,11 @@
     <color name="color_939393_333333">@color/color_333333</color>
     <color name="color_999999_CDE5FF">@color/color_CDE5FF</color>
     <color name="color_232628_EAF4FE">@color/color_EAF4FE</color>
+    <color name="color_191919_EAF4FE">@color/color_EAF4FE</color>
     <color name="color_2B2B2B_FCFCFC">@color/color_FCFCFC</color>
     <color name="color_1A1A1A_FFFFFF">@color/color_FFFFFF</color>
     <color name="color_939393_999999">@color/color_999999</color>
+    <color name="color_FFFFFF_666666">@color/color_666666</color>
 
     <!-- [End]重新配置的色彩架構 -->
 
@@ -193,8 +195,8 @@
 <!--    <color name="colorSilverDirk">#B4B4B4</color>-->
 
 <!--    <color name="colorGrayLight">#999999</color>-->
-    <color name="colorGrayLight2">#E4E4E4</color>
-    <color name="colorGrayLight3">#EFEFEF</color>
+<!--    <color name="colorGrayLight2">#E4E4E4</color>-->
+<!--    <color name="colorGrayLight3">#EFEFEF</color>-->
 <!--    <color name="colorGray">#666666</color> &lt;!&ndash;106 106 106&ndash;&gt;-->
 <!--    <color name="colorGrayDark">#404040</color>-->
 <!--    <color name="colorGrayDark2">#444444</color>-->
