調整版面與翻譯

--- a/app/src/main/res/layout/activity_game_publicity.xml
+++ b/app/src/main/res/layout/activity_game_publicity.xml
@@ -67,6 +67,7 @@
             android:background="@drawable/bg_gradient_orange3_orange_light_4dp"
             android:gravity="center"
             android:text="@string/btn_register"
+            android:textAllCaps="true"
             android:textColor="@color/color_FFFFFFFF"
             android:textSize="@dimen/textSize16sp"
             app:layout_constraintBottom_toBottomOf="@id/viewBottom"
@@ -85,6 +86,7 @@
             android:background="@drawable/bg_gradient_blue3_blue4_4dp"
             android:gravity="center"
             android:text="@string/btn_login"
+            android:textAllCaps="true"
             android:textColor="@color/color_FFFFFFFF"
             android:textSize="@dimen/textSize16sp"
             app:layout_constraintBottom_toBottomOf="@id/viewBottom"
