--- a/app/src/main/res/layout/itemview_country_league_v4.xml
+++ b/app/src/main/res/layout/itemview_country_league_v4.xml
@@ -33,7 +33,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginEnd="12dp"
         android:ellipsize="end"
-        android:singleLine="true"
+        android:maxLines="3"
         android:textColor="@color/colorBlackLight"
         android:textSize="@dimen/textSize14sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -57,7 +57,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginEnd="18dp"
+        android:layout_marginEnd="5dp"
         android:ellipsize="end"
         android:singleLine="true"
         android:textColor="@color/colorBlue"
