--- a/app/src/main/res/layout/itemview_country_v4.xml
+++ b/app/src/main/res/layout/itemview_country_v4.xml
@@ -20,6 +20,7 @@
         android:layout_marginEnd="12dp"
         android:ellipsize="end"
         android:singleLine="true"
+        android:textAllCaps="true"
         android:textColor="#202020"
         android:textSize="@dimen/textSize16sp"
         android:textStyle="bold"
