--- a/app/src/main/res/layout/itemview_sport_type_list.xml
+++ b/app/src/main/res/layout/itemview_sport_type_list.xml
@@ -13,6 +13,7 @@
         android:clipToPadding="false"
         android:orientation="horizontal"
         android:overScrollMode="never"
+        android:layout_centerHorizontal="true"
         android:paddingHorizontal="13dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
