[調整] 夜間模式 首頁球種卡片、卡片文字顏色

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -60,10 +60,9 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="10dp"
                                 android:layout_marginTop="10dp"
-                                android:alpha="0.25"
                                 android:maxLines="1"
                                 android:text="@string/goal_buster"
-                                android:textColor="@android:color/white"
+                                android:textColor="@color/home_card_top_text_color"
                                 android:textSize="@dimen/textSize16sp"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent" />
@@ -86,7 +85,7 @@
                                 android:layout_marginStart="10dp"
                                 android:includeFontPadding="false"
                                 android:paddingTop="2dp"
-                                android:textColor="@android:color/white"
+                                android:textColor="@color/home_card_text_color"
                                 android:textSize="@dimen/textSize16sp"
                                 app:layout_constraintBottom_toTopOf="@+id/tv_first_game_count"
                                 app:layout_constraintEnd_toEndOf="parent"
@@ -102,7 +101,7 @@
                                 android:layout_marginHorizontal="10dp"
                                 android:layout_marginBottom="10dp"
                                 android:includeFontPadding="false"
-                                android:textColor="@android:color/white"
+                                android:textColor="@color/home_card_text_color"
                                 android:textSize="@dimen/textSize16sp"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
@@ -130,10 +129,9 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="10dp"
                                 android:layout_marginTop="10dp"
-                                android:alpha="0.25"
                                 android:maxLines="1"
                                 android:text="@string/top_games"
-                                android:textColor="@android:color/white"
+                                android:textColor="@color/home_card_top_text_color"
                                 android:textSize="@dimen/textSize16sp"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent" />
@@ -156,7 +154,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:includeFontPadding="false"
-                                android:textColor="@android:color/white"
+                                android:textColor="@color/home_card_text_color"
                                 android:textSize="@dimen/textSize16sp"
                                 android:paddingTop="2dp"
                                 app:layout_constraintBottom_toTopOf="@id/tv_second_game_count"
@@ -173,7 +171,7 @@
                                 android:layout_marginHorizontal="10dp"
                                 android:layout_marginBottom="10dp"
                                 android:includeFontPadding="false"
-                                android:textColor="@android:color/white"
+                                android:textColor="@color/home_card_text_color"
                                 android:textSize="@dimen/textSize16sp"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
