--- a/app/src/main/res/layout/home_game_highlight_bar.xml
+++ b/app/src/main/res/layout/home_game_highlight_bar.xml
@@ -24,7 +24,8 @@
         android:text="@string/label_highlight"
         android:textAllCaps="true"
         android:textColor="@color/colorBlue"
-        android:textSize="@dimen/textSize16sp" />
+        android:textSize="@dimen/textSize16sp"
+        android:textStyle="bold" />
 
     <View
         android:layout_width="0dp"
