--- a/app/src/main/res/layout/home_game_recommend_bar.xml
+++ b/app/src/main/res/layout/home_game_recommend_bar.xml
@@ -19,12 +19,13 @@
         android:id="@+id/tv_recommend"
         android:layout_width="wrap_content"
         android:layout_height="28dp"
+        android:gravity="center"
         android:paddingHorizontal="16dp"
         android:text="@string/label_match_recommend"
         android:textAllCaps="true"
-        android:gravity="center"
         android:textColor="@color/colorBlue"
-        android:textSize="@dimen/textSize16sp" />
+        android:textSize="@dimen/textSize16sp"
+        android:textStyle="bold" />
 
     <View
         android:layout_width="0dp"
