--- a/app/src/main/res/drawable/shape_odd_category_bg_v4.xml
+++ b/app/src/main/res/drawable/shape_odd_category_bg_v4.xml
@@ -2,7 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="4dp" />
+    <solid android:color="@color/selector_odd_category_bg_v4"/>
     <stroke
         android:width="1dp"
-        android:color="@color/selector_odd_category_bg_v4" />
+        android:color="@color/selector_odd_category_stroke_v4" />
 </shape>
