[調整] 夜間模式 玩法篩選彈窗顏色

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -71,6 +71,7 @@
     <color name="play_category_text_color">#FFFFFF</color>
     <color name="play_category_stroke_color">#317FFF</color>
     <color name="play_category_solid_color">#317FFF</color>
+    <color name="play_category_pop_bg_color">@color/color_1F1F1F</color>
     <!--endregion 特殊處理顏色-->
 
 </resources>
