--- a/app/src/main/res/layout/publicity_league_view.xml
+++ b/app/src/main/res/layout/publicity_league_view.xml
@@ -17,6 +17,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="15dp"
         android:layout_weight="1"
+        android:textAllCaps="true"
         android:textColor="@color/colorBlackLight"
         android:textSize="@dimen/textSize16sp"
         android:textStyle="bold"
