調整字型配置與體育首頁 UI

--- a/app/src/main/res/layout/home_game_highlight_title.xml
+++ b/app/src/main/res/layout/home_game_highlight_title.xml
@@ -21,19 +21,20 @@
         app:layout_constraintTop_toTopOf="parent"
         app:tint="@color/colorGray"
         android:src="@drawable/ic_soccer" />
+
     <TextView
         android:id="@+id/highlight_tv_game_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:gravity="center"
-        android:textColor="@color/colorBlackLight"
-        android:textSize="@dimen/textSize18sp"
-        android:textStyle="bold"
+        android:text="@string/soccer"
         android:textAllCaps="true"
+        android:textColor="@color/colorBlackLight"
+        android:textSize="@dimen/textSize16sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="@string/soccer" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
