--- a/app/src/main/res/layout/fragment_feedback_record_list.xml
+++ b/app/src/main/res/layout/fragment_feedback_record_list.xml
@@ -13,7 +13,8 @@
         android:id="@+id/date_range_selector"
         android:layout_width="match_parent"
         android:layout_height="44dp"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="0dp" />
 
     <org.cxct.sportlottery.ui.component.StatusSelectorView
         android:id="@+id/status_selector"
