--- a/app/src/main/res/layout/view_account_history_next_title_bar.xml
+++ b/app/src/main/res/layout/view_account_history_next_title_bar.xml
@@ -50,7 +50,8 @@
         app:layout_constraintEnd_toStartOf="@id/sport_selector"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_bg" />
+        app:layout_constraintTop_toBottomOf="@id/iv_bg"
+        app:textGravity="start|center_vertical" />
 
 
     <org.cxct.sportlottery.ui.component.StatusSelectorView
@@ -66,7 +67,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintStart_toEndOf="@+id/date_selector"
-        app:layout_constraintTop_toTopOf="@+id/date_selector" />
+        app:layout_constraintTop_toTopOf="@+id/date_selector"
+        app:textGravity="start|center_vertical" />
 
 
     <TextView
